# polyhedron

./: .dockerignore  .gitignore  CUDA11.4.Dockerfile  Cargo.toml  Dockerfile  README.MD  README.md  config.yaml  docker-compose.yaml  ggml-metal.metal  http-client.env.json  student.http  teacher.http  whisper.Dockerfile
.cargo/: config.toml
.devcontainer/: devcontainer.json
config/: dev.yaml
src/: base64box.rs  class.rs  config.rs  group.rs  lesson.rs  lib.rs  main.rs  whisper.rs
src/asr/: aws.rs  mod.rs  whisper.rs
static/: avatar.html  client.js  index.html  main.css  pg.sql
static/assets/: Experience-24a16945.js  Experience-f42a3bd5.js  ScrollableContent-3b2edde3.js  ScrollableContent-49b4f3c7.css  ScrollableContent-4b731c4e.js  ScrollableContent-53f3e084.js  ScrollableContent-8254898f.js  ScrollableContent-d6882f49.js  ScrollableContent-f2ac7064.js  avatar-2909902a.js  avatar-2d784853.js  index-01d98e79.js  index-0cb9f31c.js  index-23e5b178.js  index-2542deb7.js  index-3292270b.css  index-36311875.js  index-4420fe62.js  index-4551a1f8.js  index-475823a3.js  index-4829db5f.js  index-487b7fa5.css  index-49498a48.js  index-4fc82776.js  index-54d5296c.js  index-62387bff.css  index-67ffcdbb.js  index-6877406e.js  index-68c151f5.js  index-7485c586.js  index-7e085a21.js  index-7f2eb2f6.js  index-a112de75.js  index-a4eeca40.js  index-b30faf5d.js  index-b9b081c5.js  index-bce371d1.js  index-bfb7bf61.js  index-d899befb.js  index-d99f7f2f.css  (+4 more)
tests/: stream_single.rs
whisper/: Cargo.toml
whisper/src/: config.rs  handler.rs  lib.rs
