[package]
name = "polyhedron"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["whisper"]

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
aws-config = "0.57.2"
aws-sdk-transcribestreaming = "0.36.0"
aws-sdk-translate = "0.36.0"
aws-sdk-polly = "0.36.0"
config = "0.13"
futures-util = "0.3"
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.33", features = ["macros", "rt-multi-thread", "sync", "signal"] }
tokio-stream = "0.1"
tracing = { version = "0.1", features = [] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fvad = "0.1"
whisper = { path="whisper", optional = true }
async-trait = "0.1.74"
lazy_static = { version = "1.4.0", features = [] }

[features]
whisper = ["dep:whisper"]

[dependencies.poem]
version = "1.3"
features = ["websocket", "static-files"]

[dependencies.whisper-rs]
git = "https://github.com/mingyang91/whisper-rs.git"
features = ["coreml", "metal"]
[dependencies.whisper-rs-sys]
git = "https://github.com/mingyang91/whisper-rs.git"
package = "whisper-rs-sys"

[dev-dependencies]
hound = "3.5.1"
tracing-test = "*"
