[package]
name = "polyhedron"
version = "0.1.0"
edition = "2021"

[lib]
name = "polyhedron"
path = "src/lib.rs"

[[bin]]
name = "polyhedron"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
aws-config = "1.0.0"
aws-sdk-transcribestreaming = "1.3"
aws-sdk-translate = "1.3"
aws-sdk-polly = "1.3"
config = "0.13"
futures-util = "0.3"
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.33", features = ["macros", "rt-multi-thread", "sync", "signal"] }
tokio-stream = "0.1"
tracing = { version = "0.1", features = [] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1.74"
lazy_static = "1.4.0"
base64 = { version = "0.21.5", features = [] }
tokio-postgres = "0.7.8"
chrono = "0.4.26"

[features]
default = []
whisper = ["whisper-rs"]

[dependencies.poem]
version = "1.3"
features = ["websocket", "static-files"]

[target.'cfg(target_os="macos")'.dependencies]
whisper-rs = { version = "0.10", features = ["metal", "coreml"], default-features = false, optional = true }
#
[target.'cfg(target_os="linux")'.dependencies]
whisper-rs = { version = "0.10", features = ["cuda"], default-features = false, optional = true }

[dev-dependencies]
tracing-test = "*"
poem = { version = "1.3", features = ["websocket", "static-files", "test"] }
tokio-tungstenite = "*"
hound = "*"